Manifests/Mirror/Mirror-Web/Mainpage/mirror-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror
  namespace: default
  labels:
    app: mirror
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mirror
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mirror
    spec:
      containers:
        - name: mirror
          image: ghcr.io/0xemma/mirror-main:v1.0.0
          resources:
            limits:
              memory: 800Mi
            requests:
              cpu: 100m
              memory: 800Mi
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
