Manifests/Mirror/Mirror-Web/Mainpage/mirror-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mirror-ingress-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mirror.0xem.ma`)
      kind: Rule
      services:
        - name: mirror
          kind: Service
          port: 80
  tls:
    secretName: emma-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mirror-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mirror.0xem.ma`)
      kind: Rule
      services:
        - name: mirror
          kind: Service
          port: 80
